// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Experimental/Card Card 1`] = `
<div
  dir="ltr"
>
  
    
  <div
    class="fn-card"
    style="max-width: 40rem"
  >
    
        
    <h1
      class="fn-card__title"
    >
      Card Title
    </h1>
    
        
    <span
      class="fn-card__subtitle"
    >
      Card Subtitle
    </span>
    
    
  </div>
  

</div>
`;

exports[`Storyshots Experimental/Card Data Card 1`] = `
<div
  dir="ltr"
>
  
    
  <div
    class="fn-card fn-card--data"
    style="max-width: 40rem"
  >
    
        
    <h1
      class="fn-card__title"
    >
      Data Card Title
    </h1>
    
        
    <span
      class="fn-card__subtitle"
    >
      Card Subtitle
    </span>
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    class="fn-card fn-card--data is-focus"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__title-icon-button-container"
    >
      
            
      <h1
        class="fn-card__title"
      >
        Focused Data Card Title
      </h1>
      
            
      <button
        class="fn-button fn-button--secondary fn-card__title-button"
      >
        
                
        <span
          class="fn-button__text"
        >
          Button
        </span>
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <br />
  <br />
  
    
  <div
    aria-selected="true"
    class="fn-card fn-card--data is-selected"
    style="max-width: 40rem"
  >
    
        
    <div
      class="fn-card__title-icon-button-container"
    >
      
            
      <div
        class="fn-avatar fn-avatar--xs fn-avatar--circle fn-card__title-icon"
      >
        
                
        <div
          class="fn-avatar__icon"
        >
          
                    
          <span
            class="sap-icon sap-icon--accept"
          />
          
                
        </div>
        
            
      </div>
      
            
      <div
        class="fn-card__title-container"
      >
        
                
        <h1
          class="fn-card__title"
        >
          Selected Data Card Title
        </h1>
        
                
        <span
          class="fn-card__subtitle"
        >
          Card Subtitle
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
  <br />
  <br />
    

</div>
`;
